--- a/pos-feature-shell/pos-product-form/pos-product-form.component.html
+++ b/pos-feature-shell/pos-product-form/pos-product-form.component.html
@@ -1,1 +1,82 @@
-<p>pos-product-form works!</p>
+<div class="products-wrapper">
+  <div class="add-products">
+    <mat-card appearance="outlined">
+      <mat-card-header>
+        <mat-card-subtitle> Add a New Product or Update </mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <form [formGroup]="productsFormGroup">
+          <div class="form-wrapper">
+            <mat-form-field>
+              <mat-label> Product ID </mat-label>
+              <div class="input-product-id">
+                <input
+                  formControlName="productId"
+                  matInput
+                  type="text"
+                  autocomplete="off"
+                />
+              </div>
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label> Quantity </mat-label>
+              <input
+                matInput
+                formControlName="quantity"
+                autocomplete="off"
+                type="number"
+              />
+            </mat-form-field>
+          </div>
+          <div class="product-search-actions">
+            <button type="submit" color="outlined" mat-stroked-button>
+              Add Product
+            </button>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="products-list">
+    <mat-card appearance="outlined">
+      <mat-card-header>
+        <mat-card-subtitle>Product List</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <table [dataSource]="dataSource" mat-table class="mat-elevation-z8">
+          <!--- Note that these columns can be defined in any order.
+                The actual rendered columns are set as a property on the row definition" -->
+
+          <!-- Position Column -->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>ID</th>
+            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>Name</th>
+            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          </ng-container>
+
+          <!-- Weight Column -->
+          <ng-container matColumnDef="stock">
+            <th mat-header-cell *matHeaderCellDef>Stock</th>
+            <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
+          </ng-container>
+
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef>Price</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.price | number : '.2' }}
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
