--- a/pos-feature-shell/pos-product-form/pos-product-form.component.html
+++ b/pos-feature-shell/pos-product-form/pos-product-form.component.html
@@ -1,74 +1,108 @@
-<div class="products-wrapper">
-  <div class="add-products">
-    <mat-card appearance="outlined">
-      <mat-card-header>
-        <mat-card-subtitle> Add a New Product or Update </mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <form [formGroup]="productsFormGroup">
-          <div class="form-wrapper">
-            <ng-container *ngFor="let control of formControls">
-              <mat-form-field>
-                <mat-label> {{ control.placeholder }} </mat-label>
-                <div class="input-product-id">
-                  <input
-                    [formControlName]="control.id"
-                    matInput
-                    [type]="control.type"
-                    autocomplete="off"
-                  />
-                </div>
-              </mat-form-field>
-            </ng-container>
-          </div>
-          <div class="product-search-actions">
-            <button type="submit" color="outlined" mat-stroked-button>
-              Add Product
-            </button>
-          </div>
-        </form>
-      </mat-card-content>
-    </mat-card>
+<div>
+  <mat-toolbar>
+    <button
+      matTooltip="Add New Product"
+      matTooltipPosition="below"
+      mat-icon-button
+      (click)="showAddProductForm()"
+      class="example-icon"
+    >
+      <mat-icon>add</mat-icon>
+    </button>
+    <button
+      mat-icon-button
+      matTooltip="Delete a Product"
+      matTooltipPosition="below"
+    >
+      <mat-icon>delete</mat-icon>
+    </button>
+    <span class="spacer"></span>
+    <mat-form-field class="search-field" appearance="outline">
+      <input
+        placeholder="Filter Product..."
+        [formControl]="filterFormControl"
+        matInput
+        type="text"
+      />
+    </mat-form-field>
+  </mat-toolbar>
+</div>
+<ng-template #addProduct>
+  <h4 mat-dialog-title>Add New Product</h4>
+  <div mat-dialog-content class="add-products">
+    <form [formGroup]="productsFormGroup">
+      <div class="form-wrapper">
+        <ng-container *ngFor="let control of formControls">
+          <mat-form-field>
+            <mat-label> {{ control.placeholder }} </mat-label>
+            <div class="input-product-id">
+              <input
+                [formControlName]="control.id"
+                matInput
+                [type]="control.type"
+                autocomplete="off"
+              />
+            </div>
+          </mat-form-field>
+        </ng-container>
+      </div>
+    </form>
   </div>
+  <div mat-dialog-actions align="end">
+    <button mat-stroked-button mat-dialog-close="">Cancel</button>
+    <button
+      type="submit"
+      (click)="uploadProduct()"
+      color="primary"
+      mat-stroked-button
+    >
+      Add Product
+    </button>
+  </div>
+</ng-template>
+<div class="products-wrapper">
   <div class="products-list">
     <mat-card appearance="outlined">
       <mat-card-header>
         <mat-card-subtitle>Product List</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <table [dataSource]="dataSource" mat-table class="mat-elevation-z8">
-          <!--- Note that these columns can be defined in any order.
-                The actual rendered columns are set as a property on the row definition" -->
+        <div class="table-wrapper">
+          <table [dataSource]="products$" mat-table class="table">
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef>
+                <strong>ID</strong>
+              </th>
+              <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+            </ng-container>
 
-          <!-- Position Column -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef>ID</th>
-            <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-          </ng-container>
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>
+                <strong>Name</strong>
+              </th>
+              <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+            </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>Name</th>
-            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-          </ng-container>
+            <ng-container matColumnDef="stock">
+              <th mat-header-cell *matHeaderCellDef>
+                <strong>Stock</strong>
+              </th>
+              <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
+            </ng-container>
 
-          <!-- Weight Column -->
-          <ng-container matColumnDef="stock">
-            <th mat-header-cell *matHeaderCellDef>Stock</th>
-            <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
-          </ng-container>
+            <ng-container matColumnDef="price">
+              <th mat-header-cell *matHeaderCellDef>
+                <strong>Price</strong>
+              </th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.price | number : '.2' }}
+              </td>
+            </ng-container>
 
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef>Price</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element.price | number : '.2' }}
-            </td>
-          </ng-container>
-
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-        </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+        </div>
       </mat-card-content>
     </mat-card>
   </div>
