--- a/pos-feature-shell/src/lib/pos-feature-shell/pos-feature-shell.component.html
+++ b/pos-feature-shell/src/lib/pos-feature-shell/pos-feature-shell.component.html
@@ -1,5 +1,5 @@
 <div>
-  <mat-tab-group>
+  <mat-tab-group [selectedIndex]="1">
     <mat-tab label="Cashier">
       <org-pos-cashier></org-pos-cashier>
     </mat-tab>
