--- a/pos-feature-shell/pos-product-form/pos-product-form.component.scss
+++ b/pos-feature-shell/pos-product-form/pos-product-form.component.scss
@@ -19,6 +19,10 @@
   margin-top: 24px !important;
 }
 
+.toolbar-button {
+  margin-right: 8px;
+}
+
 .add-products {
   mat-card-content {
     margin-top: 16px;
