--- a/apps/point-of-sales/src/styles.scss
+++ b/apps/point-of-sales/src/styles.scss
@@ -6,6 +6,11 @@
   flex-direction: column;
 }
 
+body,
+html {
+  background-color: rgb(248, 248, 248);
+}
+
 $primary-color: #33b249;
 
 .primary-color {
