--- a/pos-feature-shell/pos-cashier/pos-cashier.component.html
+++ b/pos-feature-shell/pos-cashier/pos-cashier.component.html
@@ -1,63 +1,56 @@
-<div class="cashier-wrapper">
-  <div class="product-search-form">
-    <mat-card appearance="outlined">
-      <mat-card-header>
-        <mat-card-subtitle> Add a new item on cart </mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <form [formGroup]="cashierFormGroup">
-          <div class="form-wrapper">
-            <mat-form-field>
-              <mat-label> Product ID </mat-label>
-              <div class="input-product-id">
-                <input
-                  formControlName="productId"
-                  matInput
-                  type="text"
-                  autocomplete="off"
-                />
-                @if (cashierFormGroup['value']['productId']) {
-                <button
-                  mat-icon-button
-                  aria-label="clear"
-                  (click)="cashierFormGroup.controls['productId'].setValue('')"
-                >
-                  <mat-icon>close</mat-icon>
-                </button>
-                }
-              </div>
-            </mat-form-field>
-            <mat-form-field>
-              <mat-label> Quantity </mat-label>
-              <input
-                matInput
-                formControlName="quantity"
-                autocomplete="off"
-                type="number"
-              />
-            </mat-form-field>
+<ng-template #enterProduct>
+  <h4 mat-dialog-title>Add Item Details</h4>
+  <div mat-dialog-content>
+    <form [formGroup]="cashierFormGroup">
+      <div class="form-wrapper">
+        <mat-form-field>
+          <mat-label> Product ID </mat-label>
+          <div class="input-product-id">
+            <input
+              formControlName="productId"
+              matInput
+              type="text"
+              autocomplete="off"
+            />
+            <mat-error *ngIf="productError()">{{ productError() }}</mat-error>
           </div>
-          <div class="product-search-actions">
-            <button
-              type="submit"
-              (click)="handleEnterProduct()"
-              color="outlined"
-              mat-stroked-button
-            >
-              Add Item
-            </button>
-          </div>
-        </form>
-      </mat-card-content>
-    </mat-card>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label> Quantity </mat-label>
+          <input
+            matInput
+            formControlName="quantity"
+            autocomplete="off"
+            type="number"
+          />
+        </mat-form-field>
+      </div>
+    </form>
   </div>
-
+  <mat-divider></mat-divider>
+  <div mat-dialog-actions align="end" class="product-search-actions">
+    <button color="outlined" mat-stroked-button mat-dialog-close>Close</button>
+    <button
+      type="submit"
+      (click)="handleEnterProduct()"
+      color="primary"
+      mat-stroked-button
+    >
+      Add Item
+    </button>
+  </div>
+</ng-template>
+<div class="cashier-wrapper">
   <ng-template #confirmDialog>
-    <h1 mat-dialog-title>Complete your Transaction</h1>
-    <mat-dialog-content>
+    <h1 mat-dialog-title>Complete your transaction</h1>
+    <mat-divider></mat-divider>
+    <div
+      mat-dialog-content
+      [style]="{ overflow: 'hidden', marginBottom: '8px' }"
+    >
       <div class="confirm-dialog-content">
         <h4>Amount:</h4>
-        <h1 [style]="{ fontWeight: 'bolder', fontSize: '64px' }">
+        <h1 [style]="{ fontWeight: 'bolder', fontSize: '72px', margin: 0 }">
           <span [style]="{ fontSize: '48px' }">PHP</span>
           {{ this.valueInTotal() | number : '.2' }}
         </h1>
@@ -65,18 +58,22 @@
       <div class="confirm-dialog-content">
         <h4>Change:</h4>
         <h1>
-          <span [style]="{ fontSize: '24px' }">PHP</span>{{ ' ' }}
+          <span [style]="{ fontSize: '24px', margin: 0 }">PHP</span>{{ ' ' }}
           {{ this.changeAmount() | number : '.2' }}
         </h1>
       </div>
       <div class="cash-form">
-        <h4>Cash:</h4>
         <form [formGroup]="cashFormGroup">
           <mat-form-field [style]="{ width: '100% !important' }">
             <mat-label>Cash</mat-label>
-            <input matInput formControlName="cash" type="text" />
+            <input
+              [style]="{ fontSize: '48px' }"
+              matInput
+              formControlName="cash"
+              type="text"
+            />
             <button
-              [style]="{ marginRight: '4px' }"
+              [style]="{ marginRight: '8px', height: '60px' }"
               matSuffix
               mat-stroked-button
               (click)="onCashChange()"
@@ -86,25 +83,41 @@
           </mat-form-field>
         </form>
       </div>
-    </mat-dialog-content>
+    </div>
     <mat-divider></mat-divider>
-    <mat-dialog-actions align="end">
-      <button mat-button mat-dialog-close>Cancel</button>
-      <button
-        [disabled]="this.changeAmount() === 0 || this.changeAmount() > 0"
-        mat-stroked-button
-        color="warn"
-        (click)="confirmTransaction()"
-        [mat-dialog-close]="true"
-        cdkFocusInitial
-      >
-        <strong>Confirm</strong>
-      </button>
-    </mat-dialog-actions>
+    <div mat-dialog-actions align="end">
+      <div class="dialog-actions">
+        <button
+          [style]="{ fontSize: '24px', height: '65px' }"
+          mat-button
+          mat-dialog-close
+        >
+          Cancel
+        </button>
+        <button
+          [style]="{ fontSize: '24px', height: '65px' }"
+          [disabled]="this.changeAmount() === 0 || this.changeAmount() > 0"
+          mat-stroked-button
+          color="warn"
+          (click)="confirmTransaction()"
+          [mat-dialog-close]="true"
+          cdkFocusInitial
+        >
+          <strong>Confirm</strong>
+        </button>
+      </div>
+    </div>
   </ng-template>
 
   <div class="products">
-    <mat-card>
+    <mat-card
+      [style]="{
+        display: 'flex',
+        flexDirection: 'column',
+        alignItems: 'stretch',
+        height: '250px',
+      }"
+    >
       <mat-card-header>
         <mat-card-subtitle>Total Amount</mat-card-subtitle>
       </mat-card-header>
@@ -116,31 +129,56 @@
               {{ valueInTotal() | number : '.2' }}
             </h1>
           </div>
-          <div *ngIf="valueInTotal() > 0">
-            <button
-              (click)="checkConfirmTransaction()"
-              class="confirm-transaction-button"
-              color="primary"
-              mat-stroked-button
-            >
-              Confirm Transaction
-            </button>
-          </div>
         </div>
       </mat-card-content>
+      <mat-divider></mat-divider>
+      <mat-card-actions align="end">
+        <div
+          [style]="{
+            marginTop: '8px',
+            marginBottom: '8px',
+            display: 'flex',
+            justifyContent: 'flex-end'
+          }"
+        >
+          <button
+            [disabled]="!(valueInTotal() > 0)"
+            (click)="checkConfirmTransaction()"
+            class="confirm-transaction-button"
+            color="warn"
+            mat-stroked-button
+          >
+            <mat-icon>attach_money</mat-icon>
+            Confirm Transaction
+          </button>
+        </div>
+      </mat-card-actions>
     </mat-card>
-    <mat-card appearance="outlined">
-      <mat-card-header>
-        <mat-card-subtitle> Items </mat-card-subtitle>
+    <mat-card appearance="outlined" [style]="{ height: '600px' }">
+      <mat-card-header [style]="{ marginBottom: '8px' }">
+        <mat-card-title [style]="{ flexGrow: 1 }">Items</mat-card-title>
+        <div
+          [style]="{
+            display: 'flex',
+            justifyContent: 'flex-end',
+            width: '100%'
+          }"
+        >
+          <button
+            matTooltip="Add Item to Cart"
+            matTooltipPosition="below"
+            (click)="showEnterProductsDialog()"
+            mat-stroked-button
+          >
+            <mat-icon>add_shopping_cart</mat-icon> Add Item
+          </button>
+        </div>
       </mat-card-header>
+      <mat-divider></mat-divider>
       <mat-card-content>
         <ng-container *ngIf="productList().length !== 0; else emptyRecord">
           <div class="table-wrapper">
-            <table
-              mat-table
-              [dataSource]="productList()"
-              class="mat-elevation-z8"
-            >
+            <table mat-table [dataSource]="productList()">
               <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef>
                   <h3>ID</h3>
@@ -159,7 +197,9 @@
                 <th mat-header-cell *matHeaderCellDef>
                   <h3>Price</h3>
                 </th>
-                <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.price }}
+                </td>
               </ng-container>
 
               <ng-container matColumnDef="quantity">
