--- a/pos-feature-shell/pos-product-form/pos-product-form.component.html
+++ b/pos-feature-shell/pos-product-form/pos-product-form.component.html
@@ -7,6 +7,7 @@
         mat-stroked-button
         (click)="showAddProductForm()"
         class="toolbar-button"
+        color="primary"
       >
         <mat-icon>add</mat-icon>
         Add Product
@@ -17,6 +18,8 @@
         (click)="showUpdateStockForm()"
         matTooltipPosition="below"
         class="toolbar-button"
+        color="primary"
+
       >
         <mat-icon>update</mat-icon>
         Update Stock
@@ -27,6 +30,8 @@
         (click)="showDeleteProductForm()"
         matTooltipPosition="below"
         class="toolbar-button"
+        color="primary"
+
       >
         <mat-icon>delete</mat-icon>
         Delete Product
