--- a/pos-feature-shell/pos-cashier/pos-cashier.component.scss
+++ b/pos-feature-shell/pos-cashier/pos-cashier.component.scss
@@ -31,10 +31,23 @@
   .products {
     display: grid;
     grid-template-columns: 5fr 7fr;
+    grid-gap: 8px;
     width: 100%;
+    margin-top: 8px;
+
+    .table-wrapper {
+      height: 800px;
+      // overflow: hidden;
+    }
 
     ::ng-deep mat-card {
       margin-bottom: 8px !important;
+    }
+  }
+
+  .right-panel {
+    mat-card:first-child {
+      margin-bottom: 8px;
     }
   }
 
@@ -44,7 +57,7 @@
   }
 
   .confirm-transaction-button {
-    height: 100%;
+    height: 50px;
   }
 
   .table-wrapper {
