--- a/pos-feature-shell/pos-sales/pos-sales.component.html
+++ b/pos-feature-shell/pos-sales/pos-sales.component.html
@@ -55,16 +55,16 @@
   </mat-toolbar>
 </div>
 <div class="sales-wrapper">
-  <mat-card [style]="{ height: '600px' }">
+  <mat-card [style]="{ height: '650px', overflowY: 'scroll' }">
     <mat-card-content>
       <div class="table-wrapper">
         <table [dataSource]="transactions$" mat-table class="table">
-          <ng-container matColumnDef="date">
+          <ng-container matColumnDef="date_created">
             <th mat-header-cell *matHeaderCellDef>
               <strong>Transaction Date</strong>
             </th>
             <td mat-cell *matCellDef="let element">
-              {{ element.date }}
+              {{ element.date_created }}
             </td>
           </ng-container>
 
@@ -221,9 +221,9 @@
       <mat-divider></mat-divider>
       <div mat-dialog-content [style]="{ overflow: 'hidden' }">
         <div [style]="{ textAlign: 'center' }">
-          <h1 [style]="{ fontSize: '64px' }">
-            <strong [style]="{ fontSize: '48px', fontWeight: 'bolder' }"
-              >PHP {{ ' ' }}</strong
+          <h1 [style]="{ fontSize: '72px' }">
+            <strong [style]="{ fontSize: '64px', fontWeight: 'bolder' }"
+              >&#8369; {{ ' ' }}</strong
             ><span *ngIf="monthlyIncome()">{{
               monthlyIncome() | number : '.2'
             }}</span>
