--- a/pos-feature-shell/pos-product-form/pos-product-form.component.html
+++ b/pos-feature-shell/pos-product-form/pos-product-form.component.html
@@ -1,219 +1,219 @@
-<div>
-  <mat-toolbar>
-    <div>
+<div class="container">
+  <div>
+    <mat-toolbar>
+      <div>
+        <button
+          matTooltip="Add new product"
+          matTooltipPosition="below"
+          mat-stroked-button
+          (click)="showAddProductForm()"
+          class="toolbar-button"
+          color="primary"
+        >
+          <mat-icon>add</mat-icon>
+          Add Product
+        </button>
+        <button
+          mat-stroked-button
+          matTooltip="Update a product"
+          (click)="showUpdateStockForm()"
+          matTooltipPosition="below"
+          class="toolbar-button"
+          color="primary"
+        >
+          <mat-icon>update</mat-icon>
+          Update Stock
+        </button>
+        <button
+          mat-stroked-button
+          matTooltip="Delete a product"
+          (click)="showDeleteProductForm()"
+          matTooltipPosition="below"
+          class="toolbar-button"
+          color="primary"
+        >
+          <mat-icon>delete</mat-icon>
+          Delete Product
+        </button>
+      </div>
+      <span class="spacer"></span>
+      <mat-form-field class="search-field" appearance="outline">
+        <input
+          placeholder="Filter by ID"
+          [formControl]="filterFormControl"
+          matInput
+          type="text"
+        />
+      </mat-form-field>
+    </mat-toolbar>
+  </div>
+
+  <ng-template #addProduct>
+    <h4 mat-dialog-title>Add new product</h4>
+    <div mat-dialog-content class="add-products">
+      <form [formGroup]="productsFormGroup">
+        <div class="form-wrapper">
+          <ng-container *ngFor="let control of formControls">
+            <mat-form-field>
+              <mat-label> {{ control.placeholder }} </mat-label>
+              <div class="input-product-id">
+                <input
+                  [formControlName]="control.id"
+                  matInput
+                  [type]="control.type"
+                  [required]="control.required"
+                  autocomplete="off"
+                />
+                <mat-error
+                  *ngIf="control.id === 'product_id' && isItemExistError()"
+                >
+                  Product ID already exists.
+                </mat-error>
+              </div>
+            </mat-form-field>
+          </ng-container>
+        </div>
+      </form>
+    </div>
+    <mat-divider></mat-divider>
+    <div mat-dialog-actions align="end">
+      <button mat-stroked-button mat-dialog-close="">Close</button>
       <button
-        matTooltip="Add new product"
-        matTooltipPosition="below"
-        mat-stroked-button
-        (click)="showAddProductForm()"
-        class="toolbar-button"
+        type="submit"
+        (click)="uploadProduct()"
         color="primary"
+        mat-stroked-button
       >
-        <mat-icon>add</mat-icon>
         Add Product
       </button>
-      <button
-        mat-stroked-button
-        matTooltip="Update a product"
-        (click)="showUpdateStockForm()"
-        matTooltipPosition="below"
-        class="toolbar-button"
-        color="primary"
+    </div>
+  </ng-template>
 
+  <ng-template #updateStock>
+    <h4 mat-dialog-title>Update product stock</h4>
+    <div mat-dialog-content class="add-products">
+      <form [formGroup]="updateStockFormGroup">
+        <div class="form-wrapper">
+          <ng-container *ngFor="let controls of updateStockFormControls">
+            <mat-form-field>
+              <mat-label> {{ controls.placeholder }} </mat-label>
+              <div class="input-product-id">
+                <input
+                  [formControlName]="controls.id"
+                  matInput
+                  [type]="controls.type"
+                  autocomplete="off"
+                  [required]="controls.required"
+                />
+                <mat-error
+                  *ngIf="controls?.id === 'product_id' && productStockError()"
+                  >Product ID does not exist.</mat-error
+                >
+              </div>
+            </mat-form-field>
+          </ng-container>
+        </div>
+      </form>
+    </div>
+    <mat-divider></mat-divider>
+    <div mat-dialog-actions align="end">
+      <button mat-stroked-button mat-dialog-close="">Close</button>
+      <button
+        type="submit"
+        (click)="updateProductStock()"
+        color="primary"
+        mat-stroked-button
       >
-        <mat-icon>update</mat-icon>
-        Update Stock
+        Update Product
       </button>
+    </div>
+  </ng-template>
+  <ng-template #deleteProduct>
+    <h4 mat-dialog-title>Delete a Product</h4>
+    <div mat-dialog-content class="add-products">
+      <form [formGroup]="productsFormGroup">
+        <div class="form-wrapper">
+          <mat-form-field>
+            <mat-label> {{ deleteFormControls.placeholder }} </mat-label>
+            <div class="input-product-id">
+              <input
+                [formControl]="deleteFormControl"
+                matInput
+                [type]="deleteFormControls.type"
+                autocomplete="off"
+              />
+            </div>
+          </mat-form-field>
+        </div>
+      </form>
+    </div>
+    <mat-divider></mat-divider>
+    <div mat-dialog-actions align="end">
+      <button mat-stroked-button mat-dialog-close="">Close</button>
       <button
+        type="submit"
+        (click)="deleteProductId()"
+        color="warn"
         mat-stroked-button
-        matTooltip="Delete a product"
-        (click)="showDeleteProductForm()"
-        matTooltipPosition="below"
-        class="toolbar-button"
-        color="primary"
-
       >
-        <mat-icon>delete</mat-icon>
         Delete Product
       </button>
     </div>
-    <span class="spacer"></span>
-    <mat-form-field class="search-field" appearance="outline">
-      <input
-        placeholder="Filter by ID"
-        [formControl]="filterFormControl"
-        matInput
-        type="text"
-      />
-    </mat-form-field>
-  </mat-toolbar>
-</div>
+  </ng-template>
+  <div class="products-wrapper">
+    <div class="products-list">
+      <mat-card appearance="outlined">
+        <mat-card-header>
+          <mat-card-subtitle>Product List</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <div class="table-wrapper">
+            <table [dataSource]="products$" mat-table class="table">
+              <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef>
+                  <strong>ID</strong>
+                </th>
+                <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+              </ng-container>
 
-<ng-template #addProduct>
-  <h4 mat-dialog-title>Add new product</h4>
-  <div mat-dialog-content class="add-products">
-    <form [formGroup]="productsFormGroup">
-      <div class="form-wrapper">
-        <ng-container *ngFor="let control of formControls">
-          <mat-form-field>
-            <mat-label> {{ control.placeholder }} </mat-label>
-            <div class="input-product-id">
-              <input
-                [formControlName]="control.id"
-                matInput
-                [type]="control.type"
-                [required]="control.required"
-                autocomplete="off"
-              />
-              <mat-error
-                *ngIf="control.id === 'product_id' && isItemExistError()"
-              >
-                Product ID already exists.
-              </mat-error>
-            </div>
-          </mat-form-field>
-        </ng-container>
-      </div>
-    </form>
-  </div>
-  <mat-divider></mat-divider>
-  <div mat-dialog-actions align="end">
-    <button mat-stroked-button mat-dialog-close="">Close</button>
-    <button
-      type="submit"
-      (click)="uploadProduct()"
-      color="primary"
-      mat-stroked-button
-    >
-      Add Product
-    </button>
-  </div>
-</ng-template>
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>
+                  <strong>Name</strong>
+                </th>
+                <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+              </ng-container>
 
-<ng-template #updateStock>
-  <h4 mat-dialog-title>Update product stock</h4>
-  <div mat-dialog-content class="add-products">
-    <form [formGroup]="updateStockFormGroup">
-      <div class="form-wrapper">
-        <ng-container *ngFor="let controls of updateStockFormControls">
-          <mat-form-field>
-            <mat-label> {{ controls.placeholder }} </mat-label>
-            <div class="input-product-id">
-              <input
-                [formControlName]="controls.id"
-                matInput
-                [type]="controls.type"
-                autocomplete="off"
-                [required]="controls.required"
-              />
-              <mat-error
-                *ngIf="controls?.id === 'product_id' && productStockError()"
-                >Product ID does not exist.</mat-error
-              >
-            </div>
-          </mat-form-field>
-        </ng-container>
-      </div>
-    </form>
-  </div>
-  <mat-divider></mat-divider>
-  <div mat-dialog-actions align="end">
-    <button mat-stroked-button mat-dialog-close="">Close</button>
-    <button
-      type="submit"
-      (click)="updateProductStock()"
-      color="primary"
-      mat-stroked-button
-    >
-      Update Product
-    </button>
-  </div>
-</ng-template>
-<ng-template #deleteProduct>
-  <h4 mat-dialog-title>Delete a Product</h4>
-  <div mat-dialog-content class="add-products">
-    <form [formGroup]="productsFormGroup">
-      <div class="form-wrapper">
-        <mat-form-field>
-          <mat-label> {{ deleteFormControls.placeholder }} </mat-label>
-          <div class="input-product-id">
-            <input
-              [formControl]="deleteFormControl"
-              matInput
-              [type]="deleteFormControls.type"
-              autocomplete="off"
-            />
+              <ng-container matColumnDef="stock">
+                <th mat-header-cell *matHeaderCellDef>
+                  <strong>Stock</strong>
+                </th>
+                <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="price">
+                <th mat-header-cell *matHeaderCellDef>
+                  <strong>Price</strong>
+                </th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.price | number : '.2' }}
+                </td>
+              </ng-container>
+
+              <ng-container matColumnDef="date_created">
+                <th mat-header-cell *matHeaderCellDef>
+                  <strong>Date Added</strong>
+                </th>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.date_created }}
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
           </div>
-        </mat-form-field>
-      </div>
-    </form>
-  </div>
-  <mat-divider></mat-divider>
-  <div mat-dialog-actions align="end">
-    <button mat-stroked-button mat-dialog-close="">Close</button>
-    <button
-      type="submit"
-      (click)="deleteProductId()"
-      color="warn"
-      mat-stroked-button
-    >
-      Delete Product
-    </button>
-  </div>
-</ng-template>
-<div class="products-wrapper">
-  <div class="products-list">
-    <mat-card appearance="outlined">
-      <mat-card-header>
-        <mat-card-subtitle>Product List</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <div class="table-wrapper">
-          <table [dataSource]="products$" mat-table class="table">
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef>
-                <strong>ID</strong>
-              </th>
-              <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef>
-                <strong>Name</strong>
-              </th>
-              <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="stock">
-              <th mat-header-cell *matHeaderCellDef>
-                <strong>Stock</strong>
-              </th>
-              <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
-            </ng-container>
-
-            <ng-container matColumnDef="price">
-              <th mat-header-cell *matHeaderCellDef>
-                <strong>Price</strong>
-              </th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.price | number : '.2' }}
-              </td>
-            </ng-container>
-
-            <ng-container matColumnDef="date_created">
-              <th mat-header-cell *matHeaderCellDef>
-                <strong>Date Added</strong>
-              </th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.date_created }}
-              </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-          </table>
-        </div>
-      </mat-card-content>
-    </mat-card>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
 </div>
