--- a/pos-feature-shell/src/lib/products-table/products-table.component.scss
+++ b/pos-feature-shell/src/lib/products-table/products-table.component.scss
@@ -1,8 +1,12 @@
 .products-wrapper {
-  height: 100%;
+  height: 800px;
+
+  ::ng-deep mat-card {
+    height: 900px !important;
+  }
 
   ::ng-deep table {
-    height: 600px;
+    height: 800px;
   }
 
   .filter-wrapper {
@@ -17,4 +21,9 @@
   .mat-mdc-form-field-bottom-align::before {
     display: none;
   }
+}
+
+.products-table {
+  max-height: 600px !important;
+  overflow-y: scroll;
 }
